--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -13,10 +13,10 @@
         <a routerLink="/your-stay" class="text-body-1 text-white transition-colors hover:text-sage-50">
           {{ 'nav.yourStay' | translate }}
         </a>
-        <a routerLink="/gallery" class="text-body-1 text-white transition-colors hover:text-sage-50">
+        <a routerLink="/" fragment="gallery" class="text-body-1 text-white transition-colors hover:text-sage-50">
           {{ 'nav.gallery' | translate }}
         </a>
-        <a routerLink="/contact" class="text-body-1 text-white transition-colors hover:text-sage-50">
+        <a routerLink="/contact-us" class="text-body-1 text-white transition-colors hover:text-sage-50">
           {{ 'nav.contact' | translate }}
         </a>
       </nav>
