--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -8,11 +8,13 @@
       alt="Blessing Lynnwood Hero Image"
       class="md:basis-1/2 w-full md:w-1/2 h-auto object-cover"
     />
-    <div class="md:basis-1/2 -mt-24 md:mt-auto md:pt-15 px-8 text-right flex flex-col items-start">
-      <h1 class="text-5xl font-bold text-white my-8 md:-ml-12 2xl:text-9xl">
+    <div
+      class="md:basis-1/2 -mt-24 md:mt-auto md:mb-auto md:pt-8 md:pb-6 px-8 text-right flex flex-col items-start"
+    >
+      <h1 class="text-5xl font-bold text-white my-8 md:-ml-12 xl:-ml-22 2xl:text-9xl md:my-auto">
         {{ 'hero.title' | translate }}
       </h1>
-      <div class="md:w-1/2 2xl:text-2xl">
+      <div class="mb-2 md:w-1/2 2xl:text-2xl xl:-ml-10">
         <p>{{ 'hero.subtitle' | translate }}</p>
       </div>
       <a
