--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -2,39 +2,46 @@
   <div class="flex flex-col items-center gap-20">
     <!-- Content Section -->
     <div class="flex flex-col md:flex-row justify-center w-full gap-8">
-      <!-- Logo -->
-      <div class="logo flex-1 self-end hidden md:hidden!">
-        <img src="assets/images/logo.svg" alt="Blessing@Lynnwood" width="84" height="36" />
-      </div>
 
       <!-- Navigation Wrapper -->
       <div class="flex flex-col items-center md:items-end gap-10 lg:w-full max-w-7xl">
         <!-- Navigation Links -->
         <nav class="flex flex-row items-center gap-10">
-          <a [routerLink]="['/your-stay']" class="text-body-1 hover:text-sage-30 transition-colors"
-            >{{ 'nav.yourStay' | translate }}</a
-          >
-          <a
-            [routerLink]="['/']"
-            fragment="gallery"
-            class="text-body-1 hover:text-sage-30 transition-colors"
-            >{{ 'nav.gallery' | translate }}</a
-          >
-          <a [routerLink]="['/contact-us']" class="text-body-1 hover:text-sage-30 transition-colors"
-            >{{ 'nav.contact' | translate }}</a
-          >
+          <a [routerLink]="['/your-stay']" class="text-body-1 hover:text-sage-30 transition-colors">{{ 'nav.yourStay' |
+            translate }}</a>
+          <a [routerLink]="['/']" fragment="gallery" class="text-body-1 hover:text-sage-30 transition-colors">{{
+            'nav.gallery' | translate }}</a>
+          <a [routerLink]="['/contact-us']" class="text-body-1 hover:text-sage-30 transition-colors">{{ 'nav.contact' |
+            translate }}</a>
         </nav>
 
         <!-- Footer Contents -->
         <div class="flex flex-col items-center lg:flex-row lg:justify-between lg:w-full gap-10">
+          <!-- Logo -->
+          <div class="logo flex-1 self-end hidden md:hidden!">
+            <img src="assets/images/logo.svg" alt="Blessing@Lynnwood" width="120" height="48" />
+          </div>
+
+          <!-- Logos for partners -->
+          <div class="flex flex-row items-center gap-6">
+            <a href="https://www.booking.com/hotel/za/myblessing-apartment-guest-rooms.en-gb.htm" target="_blank"
+              rel="noopener noreferrer">
+              <img src="assets/images/logo-booking-dot-com.svg" alt="Booking.com Logo" width="120" height="40" />
+            </a>
+            <a href="https://www.lekkeslaap.co.za/akkommodasie/blessing-gastekamer" target="_blank"
+              rel="noopener noreferrer">
+              <img src="assets/images/logo-lekke-slaap.svg" alt="Lekker Slaap Logo" width="120" height="40" />
+            </a>
+          </div>
+
+
           <!-- Language Switcher -->
           <app-language-switcher></app-language-switcher>
 
           <!-- CTA Button -->
           <div class="flex flex-row gap-10">
             <button
-              class="px-6 py-2.5 bg-sage-50 text-button rounded-full border-2 border-sage-50 hover:bg-sage-60 transition-colors h-11"
-            >
+              class="px-6 py-2.5 bg-sage-50 text-button rounded-full border-2 border-sage-50 hover:bg-sage-60 transition-colors h-11">
               {{ 'nav.checkAvailability' | translate }}
             </button>
           </div>
@@ -49,21 +56,12 @@
 
       <!-- Footer Links -->
       <div class="flex flex-row gap-6">
-        <a
-          routerLink="/privacy-policy"
-          class="text-sm hover:text-sage-30 transition-colors underline"
-          >{{ 'footer.links.privacy' | translate }}</a
-        >
-        <a
-          routerLink="/terms-of-service"
-          class="text-sm hover:text-sage-30 transition-colors underline"
-          >{{ 'footer.links.terms' | translate }}</a
-        >
-        <a
-          routerLink="/cookies-settings"
-          class="text-sm hover:text-sage-30 transition-colors underline"
-          >{{ 'footer.links.cookies' | translate }}</a
-        >
+        <a routerLink="/privacy-policy" class="text-sm hover:text-sage-30 transition-colors underline">{{
+          'footer.links.privacy' | translate }}</a>
+        <a routerLink="/terms-of-service" class="text-sm hover:text-sage-30 transition-colors underline">{{
+          'footer.links.terms' | translate }}</a>
+        <a routerLink="/cookies-settings" class="text-sm hover:text-sage-30 transition-colors underline">{{
+          'footer.links.cookies' | translate }}</a>
       </div>
     </div>
   </div>
