--- a/src/app/pages/your-stay/your-stay.html
+++ b/src/app/pages/your-stay/your-stay.html
@@ -5,10 +5,12 @@
   <div class="flex-1 flex flex-col gap-9">
     <h2 class="text-heading-3 text-neutral-dark">{{ 'yourStay.location.title' | translate }}</h2>
     <!-- Map -->
-    <div class="w-full h-[188px] rounded-lg overflow-hidden shadow-elevation bg-gray-200">
-      <iframe width="100%" height="100%" frameborder="0" style="border: 0" [src]="googleMapsUrl" allowfullscreen
-        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+    <div class="w-full h-fit min-h-64 rounded-lg overflow-hidden shadow-elevation bg-gray-200">
+      @if (googleMapsUrl) {
+        <iframe class="block min-h-64 h-full" width="100%" height="100%" frameborder="0" style="border: 0" [src]="googleMapsUrl" allowfullscreen
+          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      }
     </div>
     <a href="https://maps.app.goo.gl/ik4sFu38WHiKzUjS9" target="_blank"
       class="inline-flex items-center gap-2.5 px-5 py-2.5 rounded-full border-2 border-sage-50 text-sage-60 text-button font-normal transition-colors hover:bg-sage-50 hover:text-white self-start">
